welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
SnakeBuggle:12: error: type mismatch;
 found   : Unit
 required: Boolean
      if (estFaceMur()) {
      ^SnakeBuggle:10: error: type mismatch;
 found   : Unit
 required: Boolean
    if (getDirection()==Direction.OUEST) {
    ^